force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AccountId__c</fullName>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>