force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BankAccountNumber__c</fullName>
    <label>Bank Account Number</label>
    <length>80</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>