force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__BankRoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BankRoutingNumber__c</fullName>
    <label>Bank Routing Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>