force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__CardHolderName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CardHolderName__c</fullName>
    <label>Card Holder Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>