force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__CardType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CardType__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>