force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__ExpirationMonth__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ExpirationMonth__c</fullName>
    <label>Expiration Month</label>
    <length>80</length>
    <type>Text</type>
</CustomField>