force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__ExpirationYear__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ExpirationYear__c</fullName>
    <label>Expiration Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>