force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>