force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__Last4Numbers__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Last4Numbers__c</fullName>
    <label>Last4Numbers</label>
    <length>20</length>
    <type>Text</type>
</CustomField>