force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__MethodType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MethodType__c</fullName>
    <label>Payment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>