force-app/main/default/objects/vlocity_ps__Payment_Method__c/fields/vlocity_ps__Nickname1__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Nickname1__c</fullName>
    <label>Nickname1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>